# ShotcutProjectCollector

./: .gitignore  .lvimrc  CMakeLists.txt  DirectoryStructure.txt  README.md  TODO.txt  build.txt  git_one_click.desktop  git_one_click.sh  test-proj-collection-blank.mlt
docs/: maintainers_guide.md
src/: file_utils.c  file_utils.h  logging.c  logging.h  main.c  parser.c  parser.h
